# mimic

./: .ocamlformat  CHANGES.md  README.md  dune-project  index.html  mimic-happy-eyeballs.opam  mimic.opam
lib/: core.ml  dune  flow.ml  hmap.ml  implicit.ml  index.mld  mimic.ml  mimic.mli  mimice.ml  mimice.mli  protocol.ml
mimic/: index.html
mimic-happy-eyeballs/: index.html
mimic-happy-eyeballs/Mimic_happy_eyeballs/: index.html
mimic-happy-eyeballs/Mimic_happy_eyeballs/Make/: index.html
mimic-happy-eyeballs/Mimic_happy_eyeballs/module-type-S/: index.html
mimic/Mimic/: index.html
mimic/Mimic/Fun/: index.html
mimic/Mimic/Merge/: index.html
mimic/Mimic/Merge/argument-1-A/: index.html
mimic/Mimic/Merge/argument-2-B/: index.html
mimic/Mimic/Mirage_protocol/: index.html
mimic/Mimic/Mirage_protocol/module-type-S/: index.html
mimic/Mimic/module-type-REPR/: index.html
mimic/Mimic__/: index.html
mimic/Mimic__/Hmap/: index.html
mimic/Mimic__Hmap/: index.html
mimic/Mimic__Implicit/: index.html
mimic/Mimic__Mirage_protocol/: index.html
mirage/: dune  mimic_happy_eyeballs.ml  mimic_happy_eyeballs.mli
test/: dune  test.ml  unixiz.ml
